# laspp

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  build.sh  codecov.yml  license_header.txt
.github/workflows/: cmake-multi-platform.yml  codecov.yml  pre-commit.yml
LICENSES/: MIT.txt
apps/: CMakeLists.txt  benchmark.cpp  benchmark.py  create_test_file.cpp  inspect_vlrs.cpp  las2las++.cpp  make_laz.cpp  test_laspp_laszip.cpp  validate_spatial_index.cpp
cmake/: SetupLaszip.cmake  SetupLazperf.cmake
src/: CMakeLists.txt  evlr.hpp  example_custom_las_point.hpp  las_header.hpp  las_point.hpp  las_reader.hpp  las_writer.hpp  lasheader.hpp  laspoint.hpp  lasreader.hpp  lasvlr.hpp  lazchunktable.hpp  lazvlr.hpp  main.cpp  spatial_index.hpp  vlr.hpp
src/laz/: bit_symbol_encoder.hpp  byte14_encoder.hpp  byte_encoder.hpp  bytes14_encoder.hpp  chunktable.hpp  encoders.hpp  gpstime11_encoder.hpp  integer_encoder.hpp  layered_stream.hpp  laz.hpp  laz_reader.hpp  laz_vlr.hpp  laz_writer.hpp  lazchunktable.hpp  lazvlr.hpp  point10_encoder.hpp  point14_encoder.hpp  raw_bytes_encoder.hpp  raw_encoder.hpp  rgb12_encoder.hpp  rgb14_encoder.hpp  rgbnir14_encoder.hpp  stream.hpp  streaming_median.hpp  symbol_encoder.hpp
src/laz/tests/: test_bit_encoder.cpp  test_byte14_encoder.cpp  test_byte_encoder.cpp  test_bytes14_encoder.cpp  test_chunktable.cpp  test_gpstime11_encoder.cpp  test_integer_encoder.cpp  test_laszip_interop.cpp  test_laz_io.cpp  test_laz_vlr.cpp  test_point10_encoder.cpp  test_point14_encoder.cpp  test_raw_bytes_encoder.cpp  test_rgb12_encoder.cpp  test_spatial_index.cpp  test_stream.cpp  test_streaming_median.cpp  test_symbol_encoder.cpp
src/tests/: test_bound2d.cpp  test_reader.cpp  test_reader_constructors.cpp  test_transform_accessors.cpp  test_writer_copy_from_reader.cpp
src/utilities/: arithmetic.hpp  assert.hpp  env.hpp  macros.hpp  memory_mapped_file.hpp  printing.hpp  thread_pool.hpp
src/utilities/tests/: test_asserts.cpp  test_memory_mapped_file.cpp  test_printing.cpp
